--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/limeli-pictures/Icon/logo-color.png" />
+    <link rel="icon" type="image/png" href="./src/assets/limeli-pictures/Icon/logo-color.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Limeli is a fictional drinks company that are specialised in selling drinks that are naturally flavoured and sweetened with honey.">
+    <link rel="preload" href="./src/assets/limeli-pictures/Test/LimeliDrinksLogo.webp" as="image">
+
     <title>Limeli</title>
   </head>
   <body>
